--- a/exercise/goose.css
+++ b/exercise/goose.css
@@ -68,12 +68,38 @@ table,td,th{
 }
 .ListTheLeft>.listContainer{
 	height:100%;
-    padding-left: 20px;
+	overflow-y:scroll;
 }
 .ListTheLeft>.listContainer>div{
     border-bottom: #ccc solid 1px;
 }
-
+.ListTheLeft>.listContainer>.Container{
+	position:absolute;
+	top:50%;right:15px;
+	-webkit-transform:translate(0,-50%);
+	transform:translate(0,-50%);
+}
+p.choi{
+	margin:0 3px;
+	padding-left:20px;
+	line-height:2rem;
+	border-left:3px solid transparent;
+	color:#656567;
+	cursor:pointer;
+}
+p.choi:hover{
+	color:#111;
+}
+p.active{
+	border-color:#c52f30;
+	background-color:#e3e3e5;
+	color:#111;
+}
+p.title{
+	font-weight: 300;
+	font-size: 13px;
+	color: #a4a4a4;
+}
 .player{
 	float:left;
 	width:220px;
@@ -98,6 +124,13 @@ table,td,th{
 	width:44px;
 	height:44px;
 }
+.timeprogress>.progress>.progress_curbar>.curbar_arc{
+	visibility:hidden;
+}
+.timeprogress>.progress:hover>.progress_curbar>.curbar_arc{
+	visibility:visible;
+}
+
 .BottomOther{
 	float:right;
 	height:100%;
@@ -270,7 +303,7 @@ table,td,th{
 	padding:0 40px;
 	border-bottom:1px solid #c52f30;
 }
-.listcontainer>.sonsheet>.shiftbutton>label{
+label{
     display: inline-block;
     font-size: 15px;
     padding:0.5em 2em;
@@ -299,4 +332,53 @@ table,td,th{
 .musicList>table th{
 	border-bottom:1px solid #e0e0e0;
 	box-sizing:border-box;
+}
+label.active{
+	font-weight: 700;
+}
+.listcontainer>.sonsheet>.shifttar{
+	display:none;
+}
+.commentlist{
+	padding:15px 40px;
+}
+.commentlist>.commentbox{
+	width:100%;
+	padding:10px 10px 15px 10px;
+	background-color:#f0f0f2;
+	position:relative;
+}
+.commentlist>.commentbox>textarea{
+	margin-bottom:10px;
+	padding:5px 10px;
+	width:100%;
+	height:80px;
+	resize:none;
+	outline:none;
+	border:1px solid #e3e3e5;
+	background-color:#fff;
+	box-sizing:border-box;
+}
+.commentlist>.commentbox>.wordslen{
+	position:absolute;
+	top:66px;right:15px;
+	color:#8b8b86;
+}
+.commentlist>.commentbox>.btn.comment{
+	float:right;
+	display:inline-block;
+	padding:2px 10px;
+	border:1px solid #e3e3e5;
+	border-radius:5px;
+	background-color:#fdfdfd;
+	text-decoration: none;
+	color: #111;
+	-webkit-transform:translate(-50%,-50%);
+	transform:translate(-50%,-50%);
+}
+.commentlist>.commenttable{
+	margin:30px 0;
+}
+.followerlist{
+	padding:20px 50px;
 }
