--- a/exercise/goose.css
+++ b/exercise/goose.css
@@ -1,5 +1,11 @@
-html,body{width:100%;height:100%;overflow:hidden;}
-html{font-size:20px;}
+html,body{
+	width:100%;
+	height:100%;
+	overflow:hidden;
+}
+html{
+	font-size:20px;
+}
 body{
 	min-width:1024px;
 	font-size:0.7rem;
@@ -89,6 +95,7 @@ p.choi{
 }
 p.choi:hover{
 	color:#111;
+	background-color: #e2e2e2;
 }
 p.active{
 	border-color:#c52f30;
@@ -101,8 +108,8 @@ p.title{
 	color: #a4a4a4;
 }
 .player{
-	float:left;
-	width:220px;
+	float: left;
+	width:200px;
 	height:100%;
 	text-align:center;
 }
@@ -110,7 +117,7 @@ p.title{
 	display:inline-block;
 	width:40px;
 	height:40px;
-	margin-left:16px;
+	margin-bottom: 40px;
 	border-radius:50%;
 	position:relative;
 	top:50%;left:0;
